--- a/playground/demo.html
+++ b/playground/demo.html
@@ -41,11 +41,27 @@
 
   function render(id, result) {
     const el = document.getElementById(id)
-    el.textContent =
-      id.toUpperCase() + ' = ' +
-      (result.blocked ? 'DETECTED' : 'PASSED') +
-      ' (confidence: ' + result.confidence.toFixed(2) + ')'
 
+    let output = ''
+    output += id.toUpperCase() + '\n'
+    output += 'Status: ' + (result.blocked ? 'DETECTED' : 'PASSED') + '\n'
+    output += 'Final confidence: ' + result.confidence.toFixed(2) + '\n\n'
+    output += 'Signals:\n'
+
+    for (const s of result.signals) {
+      const weight = s.weight ?? 1
+      const confidence = s.confidence ?? 1
+      const contribution = (weight * confidence).toFixed(2)
+
+      output +=
+        `- ${s.strategy}\n` +
+        `  block: ${s.block}\n` +
+        `  weight: ${weight}\n` +
+        `  confidence: ${confidence}\n` +
+        `  contribution: ${contribution}\n\n`
+    }
+
+    el.textContent = output
     el.className = result.blocked ? 'bad' : 'ok'
   }
 
