chore: legend for primary signal contributor

--- a/playground/demo.html
+++ b/playground/demo.html
@@ -123,6 +123,9 @@
 <!-- Strategy graph -->
 <div class="panel">
   <strong>Strategy Execution Graph</strong>
+  <div style="margin-top:6px; font-size:12px; color:#999">
+    <span style="color:#ff5f5f">■</span> Primary signal contributor
+  </div>
   <div id="graph" style="height:300px; margin-top:10px;"></div>
 </div>
 
